<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"

        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/textViewLabelTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_from_left_screen"
        android:layout_marginTop="@dimen/margin_vertical"
        android:text="@string/label_title"
        android:textColor="@color/colorAccent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_from_left_screen"
        android:layout_marginTop="@dimen/margin_vertical"
        android:layout_marginEnd="@dimen/margin_from_right_screen"
        android:textColor="@color/white_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelineCenter"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_line"
        android:layout_margin="@dimen/margin_line"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle" />

    <TextView
        android:id="@+id/textViewLabelOriginalTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_from_left_screen"
        android:layout_marginTop="@dimen/margin_vertical"
        android:text="@string/label_original_title"
        android:textColor="@color/colorAccent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

    <TextView
        android:id="@+id/textViewOriginalTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_from_left_screen"
        android:layout_marginTop="@dimen/margin_vertical"
        android:layout_marginEnd="@dimen/margin_from_right_screen"
        android:textColor="@color/white_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelineCenter"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />


    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_line"
        android:layout_margin="@dimen/margin_line"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewOriginalTitle" />

    <TextView
        android:id="@+id/textViewLabelRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_from_left_screen"
        android:layout_marginTop="@dimen/margin_vertical"
        android:text="@string/label_rating"
        android:textColor="@color/colorAccent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewOriginalTitle" />

    <TextView
        android:id="@+id/textViewRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_from_left_screen"
        android:layout_marginTop="@dimen/margin_vertical"
        android:textColor="@color/white_color"
        app:layout_constraintStart_toStartOf="@+id/guidelineCenter"
        app:layout_constraintTop_toBottomOf="@+id/textViewOriginalTitle" />


    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_line"
        android:layout_margin="@dimen/margin_line"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewRating" />

    <TextView
        android:id="@+id/textViewLabelReleaseDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_from_left_screen"
        android:layout_marginTop="@dimen/margin_vertical"
        android:text="@string/label_release_date"
        android:textColor="@color/colorAccent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRating" />

    <TextView
        android:id="@+id/textViewReleaseDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_from_left_screen"
        android:layout_marginTop="@dimen/margin_vertical"
        android:layout_marginEnd="@dimen/margin_vertical"
        android:textColor="@color/white_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelineCenter"
        app:layout_constraintTop_toBottomOf="@+id/textViewRating" />


    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_line"
        android:layout_margin="@dimen/margin_line"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewReleaseDate" />

    <TextView
        android:id="@+id/textViewLabelDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_from_left_screen"
        android:layout_marginTop="@dimen/margin_vertical"
        android:text="@string/label_description"
        android:textColor="@color/colorAccent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewReleaseDate" />

    <TextView
        android:id="@+id/textViewOverview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_vertical"
        android:layout_marginEnd="@dimen/margin_from_left_screen"
        android:layout_marginStart="@dimen/margin_from_left_screen"
        android:paddingBottom="@dimen/padding_overview_bottom"
        android:textColor="@color/white_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLabelDescription" />


    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_line"
        android:layout_margin="@dimen/margin_line"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewOverview" />


    <androidx.recyclerview.widget.RecyclerView

        android:id="@+id/recyclerViewTrailers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:nestedScrollingEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewOverview"

        />
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_line"
        android:layout_margin="@dimen/margin_line"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recyclerViewTrailers" />


    <androidx.recyclerview.widget.RecyclerView

        android:id="@+id/recyclerViewReviews"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:nestedScrollingEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recyclerViewTrailers"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_line"
        android:layout_margin="@dimen/margin_line"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recyclerViewTrailers" />


</androidx.constraintlayout.widget.ConstraintLayout>